feat(item): add custom enchants and stat debugging